<resources>
    <string name="app_name">Construindo Seu Negócio</string>
    <string name="title_login">Construindo seu Negócio Login</string>
    <string name="login_google">Login com Google</string>
    <string name="logout">Sair</string>
    <string name="welcome_msg">Empreendedor.  \n Seja bem vindo ao nosso aplicativo!</string>
    <string name="developers">Desenvolvido por Mag™</string>
    <string name="select_color">Selecione uma cor</string>
    <string name="select_font">Selecione uma fonte</string>
    <string name="ok">Ok</string>
    <string name="cancel">Cancelar</string>
    <string name="title_activity_main2">Página Financeira</string>
    <string name="tab_text_1">IMC</string>
    <string name="tab_text_2">DRE</string>
    <string name="tab_text_3">Análises</string>
    <string name="title_IMCtab">Margem de Contribuição</string>
    <string name="desc_graphFina">Gráficos financeiros</string>
    <string name="title_Fina">Registre:</string>
    <string name="bt_entraFina">Entrada</string>
    <string name="bt_saidaFina">Saída</string>
    <string name="bt_fluxoFina">Fluxo de Caixa</string>
    <string name="bt_caixaFina">Custos e Despesas</string>
    <string name="bt_indicFina">Indíce Financeiro</string>
    <string name="content_IMCtab">Será que você está lucrando? Este é o lucro bruto que sobra após o pagamento das dívidas de venda do seu negócio!
    </string>
    <string name="title_DREtab">Demonstração do Resultado dos Exercícios (DRE)</string>
    <string name="content_DREtab">É o lucro líquido após o pagamento de todas as suas despesas! (O acompanhamento de um contador é essencial para o cálculo exato, procure um profissional)
    </string>
    <string name="title_Anatab">Análise dos Resultados e Demonstrações Financeiras</string>
    <string name="content_MEIjury">Microempreendedor individual (MEI), no Brasil, é o empresário individual a que se refere o artigo 966 do
        Código Civil Brasileiro. Atua geralmente como empresa virtual, através de formas que independem de estabelecimento fixo, como
        Internet, porta-a-porta, máquinas automáticas, correios, telemensagens e outros meios virtuais previstos em lei. O MEI trabalha
        como pequeno empresário, desde que fature no máximo 81 mil reais por ano, não tenha participação em outra empresa como sócio,
        administrador ou titular e tenha no máximo um empregado contratado que receba o salário mínimo ou o piso da categoria.
    </string>
    <string name="content_SWOTmark"><b>Ambiente interno:</b> Determina as forças e fraquezas.\n\n
        <b>Forças:</b>  São as vantagens internas, o que faz a empresa se destacar sobre os concorrentes.\n
        <b>Fraquezas:</b> São as desvantagens internas que atrapalham o crescimento da sua empresa em relação a concorrência.\n
    </string>
    <string name="content_SWOTmark2"><b>Ambiente externo:</b>  Possibilita a definição das oportunidades e ameaças.\n\n
        <b>Oportunidades:</b> São os fatores externos que cria um cenário favorável para o negócio e tem o potencial de fazer crescer a vantagem competitiva da empresa.\n
        <b>Ameaças:</b> É o oposto das oportunidades. São os aspectos negativos externos e com o potencial de abalar a vantagem competitiva da empresa.\n\n
        <b>EXEMPLO DE ANALISE SWOT:</b>
    </string>
    <string name="content_SWOTmark3">\n
        Criando sua Analise Swot (PASSO A PASSO):\n\n
        1.	Defina suas forças.\n
        2.	Determine suas fraquezas.\n
        3.	Liste as oportunidades.\n
        4.	Enumere as ameaças.\n
        5.	Coloque os dados nos locais da planilha conforme a figura.\n
        6.	Faça as correlações entre os fatores da matriz e determine:\n
        \t•	Forças podem potencializar quais oportunidades.\n
        \t•	Forças podem combater quais ameaças.\n
        \t•	Fraquezas podem prejudicar quais oportunidades.\n
        \t• Fraquezas podem potencializar quais ameaças.\n
    </string>
    <string name="huma_procuracao_text"><![CDATA[Jéssica de Lima, brasileira, solteira, técnica administrativa, residente na rua canvas bigodes, São Paulo, São Paulo, portadora do RG n° 8189-10012, CPF n° 000-9552 pelo presente instrumento constitui e nomeia seu bastante procurador Alice Glória Nascimento de Sousa, brasileira, solteira, administradora, residente em São Paulo, São Paulo, portadora do RG n° 1111-11111 CPF n° 000-2222 representa-la junto á empresa Cosméticos & Cia com a finalidade especifica de vender encomendar produtos de beleza, podendo, para tanto, assinar recibo de produtos de beleza, realizando todos os atos a esse fim, dando tudo por firme e valioso, a bem deste mandato.]]></string>
    <string name="huma_oficio_text"><![CDATA[Ofício é uma carta formal em que se informa sobre assuntos oficiais para os órgãos da administração pública pode ser destinado também para órgãos particulares. Exemplo: \nOfício \nSr. Carlos Eduardo Fonseca \nAdministrador \nCosméticos & Cia \nAssunto: Planejamento estratégico de logística \n\nPrezado sr. Carlos Eduardo Fonseca, administrador \nEu, Clarice Lispector, brasileira, solteira, técnica administrativa, inscrito no CPF n° 808-080-808-0, residente e domiciliado a São Paulo, sirvo-me do presente para solicitar uma reavaliação e planejamento estratégico da logística da empresa. \nAgradeço a atenção \nSão Paulo, 15 de julho de 2019]]></string>
    <string name="huma_ata_text"><![CDATA[Ata de Reunião: para evitar futuras dúvidas sobre a reunião com a finalidade de garantir e
        certificar oficialmente tudo que foi relato registrando no livro Ata. Há duas maneiras de fazer a Ata de reunião manuscrito no
        livro ata e digitalizado em formato em editor de texto que impossibilita de alterações no documento como o PDF. \nComo fazer: o que
        não pode ter na ata\n• Não pode ter parágrafos\n• Sem abreviaturas\n• Sem rasuras ou emendas\nO que deve ter na ata:\n
        • Data, local, horário de início e fim da reunião\n    • Nome das pessoas presentes e seus cargos\n    • Discussão\n
        • Decisões e o desfecho da reunião]]>
    </string>
    <string name="bemEstar_title">O Bem Estar Empresarial</string>
    <string name="bemEstar_text">O bem-estar empresarial está relacionada ao ambiente de Trabalho como as pessoas se veem neste ambiente e
        qual é o ambiente que a empresa oferece. O bem-estar empresarial é aquando todos contribuem para que o ambiente de trabalho seja
        agradável em prol do bem comum, visando atingir o objetivo de suas atividades de trabalho e para o bem-estar de todos os membros
        da equipe.\n Há alguns fatores que podem influenciar o meio corporativo são elas:\n\n   • O ambiente psicossocial do trabalho
        incluindo as atitudes, as crenças, ou seja, a convivência do funcionário com os seus colegas de trabalho no meio corporativo, o
        relacionamento entre o funcionário e o seu supervisor e as atividades agradável e motivadora proposta dentro de sua área de atuação.
        \n\n   • Os recursos de saúde os quais o trabalhador tem acesso para manter estável a saúde física e emocional.\n\n
    </string>
    <string name="layEmpresarial_title">Layout Empresarial</string>
    <string name="layEmpresarial_text">O layout é o ambiente físico de uma empresa, um ambiente organizado é fundamental para um local
        agradável que estimulem a criatividade e a interação entre os colaboradores, contribuindo assim, para a produtividade de cada
        funcionário e para a otimização de seus resultados. Há alguns fatores como:\n\n   • Uma boa iluminação;\n\n   • Ventilação (uma boa
        estrutura física que permite a circulação do ar);\n\n   • Um ambiente bem equipado\n\n   Estes fatores favorecem para um local
        confortável e adequado para a realização de suas atividades, com as tecnologias necessárias à execução das tarefas evita que os
        colaboradores se estressem por conta de problemas operacionais.
    </string>
    <string name="pesquisa_title">Pesquisa de Mercado</string>
    <string name="pesquisa_content">Passo a Passo para realizar uma pesquisa de mercado:\n
        1.	Definir seu público-alvo. \n
        2.	Definir o objetivo da sua pesquisa (Ajudar o desenvolvimento de uma empresa ou negócio, satisfazer as necessidades dos clientes
        com um produto ou serviço ideal, determinar o grau de sucesso ou fracasso que uma ideia de negócio pode ter, etc.)\n
        3. Forma de coleta de dados:
    </string>
    <string name="pesquisa_primaria">(pesquisa primária o</string>
    <string name="pesquisa_secundaria">u secundária)</string>
    <string name="pesquisa_content2">4. Decidir o método (pesquisa qualitativa ou quantitativa – Enquetes online? Observação? Entrevistas?).</string>
    <string name="pesquisa_quantitativa">Pesquisa Quantitativa:</string>
    <string name="pesquisa_qualitativa">Pesquisa Qualitativa:</string>
    <string name="pesquisa_content4">Para a elaboração da pesquisa qualitativa, pode-se ter uma maior quantidade de perguntas abertas,
        e uma menor amostra.
    </string>
    <string name="pesquisa_content3">Para fazer uma boa pesquisa quantitativa é necessário fazer um questionário com perguntas objetivas,
        curtas e claras, com a maioria das perguntas fechadas.
    </string>
    <string name="pesquisa_content5">5. Definição da amostra (quantidade de pessoas a serem entrevistadas).\n
        6. Elaborar o questionário. (PASSO A PASSO NO NOSSO FUTURO SITE)\n
        7. Aplicar a pesquisa de mercado (botar em pratica – abordar as pessoas, horário e data propício, etc.)\n\n
        <b>Perguntas fechadas:</b> São perguntas de múltipla escolha. Essas questões facilitam a análise das respostas e é crucial nas
        pesquisas quantitativas.\n
        <b>Perguntas abertas:</b> São perguntas em que não há alternativas, fazendo com que o entrevistado responda da forma que desejar.
        Essas questões dão uma visão mais completa e profunda sobre o tema pesquisado.\n\n
    </string>
</resources>