<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fcfbf9"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/image"
        android:layout_width="230dp"
        android:layout_height="230dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:scaleType="centerCrop"
        android:src="@drawable/logo"
        android:contentDescription="@string/app_name"/>

    <TextView
        android:id="@+id/text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title_login"
        android:textColor="#1E1E24"
        android:textSize="16sp"
        android:layout_marginTop="10dp"
        android:layout_below="@id/image"
        android:gravity="center"/>

    <ProgressBar
        android:visibility="invisible"
        android:id="@+id/progress_circular"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/text"
        android:layout_marginTop="20dp"
        android:layout_centerHorizontal="true"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_below="@id/progress_circular"
        android:text="@string/welcome_msg"
        android:gravity="center"
        android:layout_marginTop="15dp"
        android:textColor="#1E1E24"/>
    <Button
        android:id="@+id/login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="30dp"
        android:layout_marginLeft="26dp"
        android:layout_marginRight="26dp"
        android:text="@string/login_google"
        android:background="@drawable/round_bg"
        android:drawableStart="@drawable/ic_google_logo"
        android:drawableLeft="@drawable/ic_google_logo"/>
</RelativeLayout>