<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f7ebe8"
    tools:context=".MarkSWOT">

    <TextView
        android:id="@+id/swot_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Análise SWOT (FOFA)"
        android:layout_marginLeft="20dp"
        android:layout_marginStart="20dp"
        android:textStyle="bold"
        android:textSize="25sp"
        android:textColor="#E84C4C"
        android:layout_marginTop="10dp"
        android:justificationMode="inter_word"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:text="Info"
        android:textSize="14sp"
        android:layout_alignBottom="@+id/swot_title"
        android:layout_toRightOf="@+id/swot_title"
        android:layout_toEndOf="@+id/swot_title"
        android:textColor="#4072C7"
        android:onClick="dialSWOT"/>

    <ScrollView
        android:layout_below="@+id/swot_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity ="center"
        android:fillViewport="true"
        android:layout_marginTop="0dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="15dp"
        android:layout_marginStart="15dp"
        android:layout_marginRight="20dp"
        android:layout_marginEnd="20dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="O que é?"
            android:textSize="14sp"
            android:textColor="#4072C7"
            android:onClick="dialAmbInt"/>
        <TextView
            android:id="@+id/swot_text"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textColor="#1E1E24"
            android:textSize="16sp"
            android:text="@string/content_SWOTmark"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="O que é?"
            android:textSize="14sp"
            android:textColor="#4072C7"
            android:onClick="dialAmbExt"/>
        <TextView
            android:id="@+id/swot_text2"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textColor="#1E1E24"
            android:textSize="16sp"
            android:text="@string/content_SWOTmark2"/>

        <ImageButton
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/swotmc"
            android:contentDescription="Análise SWOT Mcdonald's" />

        <TextView
            android:id="@+id/swot_text3"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/content_SWOTmark3"
            android:textColor="#1E1E24"
            android:textSize="16sp"/>

    </LinearLayout>
    </ScrollView>
</RelativeLayout>